# fastapi_zero

./: .gitignore  main.py  pyproject.toml  requirements.txt
fastapi_zero/: .gitignore  app.py  auth.py  database.py  schemas.py
fastapi_zero/commands/: user_commands.py
fastapi_zero/models/: __init__.py  category.py  task.py  user.py
fastapi_zero/routers/: __init__.py  categories.py  tasks.py  users.py
fastapi_zero/services/: notification_service.py
fastapi_zero/strategy/: prioridade.py
fastapi_zero/tests/: conftest.py  test_app.py  test_db.py
frontend/: index.html  script.js  style.css
