[project]
name = "fastapi-zero"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard] (>=0.135.1,<0.136.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ruff (>=0.15.7,<0.16.0)"
]

[tool.ruff]
line-length = 79
extend-exclude = ["migrations"]



[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']
ignore = ["PLR2004"]


[tool.ruff.format]
preview = true
quote-style = "double"


[tool.pytest.ini_options]
pythonpath = "."
addopts = "-p no:warnings"



[tool.taskipy.tasks]
lint = 'ruff check . --fix'
format = 'ruff format .'
pre_test = 'task lint'
test = 'pytest -s -x --cov=fastapi_zero -vv'
post_test = 'coverage html'
run = 'uvicorn fastapi_zero.app:app --reload'



